--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ build_flags =
   -D FT_PROJECT=1
   -D FT_SECURITY=1
   -D FT_MQTT=1
-  -D FT_NTP=0
+  -D FT_NTP=1
   -D FT_OTA=1
   -D FT_UPLOAD_FIRMWARE=1
   ; -D NO_GLOBAL_ARDUINOOTA
@@ -53,16 +53,16 @@ check_flags =
     clangtidy: --checks=-*,clang-analyzer-*,performance-*
 
 ; USB upload
-; upload_protocol = esptool
+upload_protocol = esptool
 ; upload_port = COM4
-; upload_port = /dev/cu.wchusbserial1420
+upload_port = /dev/cu.wchusbserial1410
 
 ; OTA upload
-upload_protocol = espota
-upload_flags = 
-   --port=8266
-   --auth=admin
-upload_port = 10.10.10.168
+; upload_protocol = espota
+; upload_flags = 
+;    --port=8266
+;    --auth=admin
+; upload_port = 10.10.10.168
 
 [env:esp8266]
 board = esp12e ; https://github.com/platformio/platform-espressif8266/tree/master/boards
